Adjust New Logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LearnApp</string>
+    <string name="app_name">Users</string>
     <string name="id">ID</string>
     <string name="name">Name</string>
     <string name="email">Email</string>
